--- a/common/color_definitions.scss
+++ b/common/color_definitions.scss
@@ -1,56 +1,5 @@
 :root {
-  --primary-darkest-2: #002625;
-  --primary-darkest: #002c2a;
-  --primary-darker: #003734;
-  --primary-dark: #00524f;
-  --primary: #006d69;
-  --primary-light: #80b6b4;
-  --primary-lighter: #bfdbd9;
-  --primary-lightest-2: #e5f0f0;
-  --primary-lightest-1: #f2f8f7;
-
-  --accent1-darker: #576629;
-  --accent1-dark: #83993e;
-  --accent1: #aecc53;
-  --accent1-light: #d7e6a9;
-  --accent1-lighter: #ebf2d4;
-  --accent1-lightest-2: #f7faee;
-  --accent1-lightest-1: #fbfcf6;
-
-  --gray-darker: #777777;
-  --gray-dark: #b2b2b2;
-  --gray: #ededed;
-  --gray-light: #f6f6f6;
-  --gray-lighter: #fbfbfb;
-  --gray-lightest-2: #fdfdfd;
-  --gray-lightest-1: #fefefe;
-
-  --black: #3c3c3c;
-  --black-light: rgba(60, 60, 60, 0.8);
-  --black-lighter: rgba(60, 60, 60, 0.25);
-  --black-lightest-2: rgba(60, 60, 60, 0.1);
-  --black-lightest-1: rgba(60, 60, 60, 0.05);
-
-  --white: #fff;
-  --white-lighter: rgba(255, 255, 255, 0.5);
-  --white-lightest-1: rgba(255, 255, 255, 0.25);
-
-  --danger-dark: #a61d15;
-  --danger: #dd261c;
-  --danger-light: #ee938d;
-
-  --shadow-1: 0px 0px 1px rgba(12, 26, 75, 0.24),
-    0px 3px 8px -1px rgba(50, 50, 71, 0.05);
-  --shadow-2: 0px 0px 1px rgba(12, 26, 75, 0.1),
-    0px 4px 20px -2px rgba(50, 50, 71, 0.08);
-  --shadow-3: 0px 0px 1px rgba(12, 26, 75, 0.1),
-    0px 10px 16px rgba(20, 37, 63, 0.06);
-  --shadow-4: 0px 0px 1px rgba(12, 26, 75, 0.1),
-    0px 20px 24px rgba(20, 37, 63, 0.06);
-  --shadow-5: 0px 0px 1px rgba(12, 26, 75, 0.1),
-    0px 30px 40px rgba(20, 37, 63, 0.08);
-
-  --scheme-type: light;
+  --scheme-type: gsf-brand;
   --primary: #3c3c3c;
   --secondary: #fbfcf6;
   --tertiary: #006d69;
@@ -68,12 +17,12 @@
   --header_background-rgb: 251, 252, 246;
   --tertiary-rgb: 0, 109, 105;
 
-  --primary-very-low: #f2f8f7;
-  --primary-low: #e5f0f0;
-  --primary-low-mid: #bfdbd9;
-  --primary-medium: #80b6b4;
-  --primary-high: #00524f;
-  --primary-very-high: #003734;
+  --primary-very-low: #fefefe;
+  --primary-low: #fdfdfd;
+  --primary-low-mid: #fbfbfb;
+  --primary-medium: #f6f6f6;
+  --primary-high: #b2b2b2;
+  --primary-very-high: #777777;
 
   --header_primary-low: #eff0ea;
   --header_primary-low-mid: #cdcec9;
@@ -92,7 +41,7 @@
   --tertiary-high: #00524f;
   --tertiary-hover: #00524f;
 
-  --quaternary-low: #80b6b4;
+  --quaternary-low: #e5f0f0;
 
   --highlight-low: #ffffca;
   --highlight-medium: #ffffa6;
