--- a/common/color_definitions.scss
+++ b/common/color_definitions.scss
@@ -25,6 +25,7 @@
 
   --secondary-low: #ebf2d4;
   --secondary-medium: #d7e6a9;
+  --secondary-normal: #aecc53;
   --secondary-high: #83993e;
   --secondary-very-high: #576629;
 
@@ -39,52 +40,4 @@
   --highlight-low: #ffffca;
   --highlight-medium: #ffffa6;
   --highlight-high: #a6a600;
-  --danger-low: #fbdedc;
-  --danger-low-mid: rgba(240, 144, 139, 0.7);
-  --danger-medium: #ea645d;
-  --danger-hover: #b11e16;
-  --success-low: #f7faee;
-  --success-medium: #ebf3d4;
-  --success-hover: #bad46b;
-  --love-low: #fcefee;
-  --wiki: green;
-  --blend-primary-secondary-5: #f5f6f0;
-  --primary-med-or-secondary-med: #9e9e9e;
-  --primary-med-or-secondary-high: #9e9e9e;
-  --primary-high-or-secondary-low: #777;
-  --primary-low-mid-or-secondary-high: #c5c5c5;
-  --primary-low-mid-or-secondary-low: #c5c5c5;
-  --primary-or-primary-low-mid: #3c3c3c;
-  --highlight-low-or-medium: #ffffca;
-  --tertiary-or-tertiary-low: #006d69;
-  --tertiary-low-or-tertiary-high: #c3fffd;
-  --tertiary-med-or-tertiary: #37fff8;
-  --secondary-or-primary: #fbfcf6;
-  --tertiary-or-white: #006d69;
-  --facebook-or-white: #1877f2;
-  --twitter-or-white: #1da1f2;
-  --hljs-comment: #998;
-  --hljs-number: #099;
-  --hljs-string: #d14;
-  --hljs-literal: #458;
-  --hljs-tag: #000080;
-  --hljs-attribute: #008080;
-  --hljs-symbol: #990073;
-  --hljs-bg: #f8f8f8;
-  --google: #fff;
-  --google-hover: #f2f2f2;
-  --instagram: #e1306c;
-  --instagram-hover: #ac194b;
-  --facebook: #1877f2;
-  --facebook-hover: #0a54b3;
-  --cas: #70ba61;
-  --twitter: #1da1f2;
-  --twitter-hover: #0c85d0;
-  --github: #100e0f;
-  --github-hover: #463e42;
-  --discord: #7289da;
-  --discord-hover: #4a67cf;
-  --gold: #e7c300;
-  --silver: silver;
-  --bronze: #cd7f32;
 }
