--- a/common/common.scss
+++ b/common/common.scss
@@ -33,47 +33,48 @@
 .d-header-icons .unread-notifications {
   background-color: var(--secondary-normal);
 }
+html {
+  .page-title {
+    position: relative;
 
-.page-title {
-  position: relative;
-
-  text-transform: uppercase;
-  letter-spacing: 0.75rem;
-  margin: 4rem 0;
-  .pattern {
-    position: absolute;
-    height: 105px;
-    z-index: -1;
-    svg {
-      height: 100%;
-      width: auto;
-    }
-  }
-  h1 {
-    font-weight: 900;
-    font-size: 1.25rem;
-    text-align: center;
-    margin: 0;
-  }
-  // Tablet
-  @media (min-width: 640px) and (max-width: 1280px) {
-    margin: 6rem 0;
+    text-transform: uppercase;
+    letter-spacing: 0.75rem;
+    margin: 4rem 0;
     .pattern {
-      height: 160px;
+      position: absolute;
+      height: 105px;
+      z-index: -1;
+      svg {
+        height: 100%;
+        width: auto;
+      }
     }
     h1 {
-      font-size: 2.25rem;
+      font-weight: 900;
+      font-size: 1.25rem;
+      text-align: center;
+      margin: 0;
     }
-  }
+    // Tablet
+    @media (min-width: 640px) and (max-width: 1280px) {
+      margin: 6rem 0;
+      .pattern {
+        height: 160px;
+      }
+      h1 {
+        font-size: 2.25rem;
+      }
+    }
 
-  // Desktop and Larger
-  @media (min-width: 1280px) {
-    margin: 8rem 0;
-    .pattern {
-      height: 230px;
-    }
-    h1 {
-      font-size: 3rem;
+    // Desktop and Larger
+    @media (min-width: 1280px) {
+      margin: 8rem 0;
+      .pattern {
+        height: 230px;
+      }
+      h1 {
+        font-size: 3rem;
+      }
     }
   }
 }
